--- a/jenkins/JenkinsFile
+++ b/jenkins/JenkinsFile
@@ -2,11 +2,18 @@ pipeline {
     agent any
 
     stages {
-        stage('Hello') {
+        stage('Unit Tests-Backend') {
+            agent {
+                docker{
+                    image 'snakee/golang-junit:1.21'
+                    reuseNode true
+                }
+            }
             steps {
-                echo 'Hello World'
-                sh 'echo "hello shanagha"'
-                sh 'date'
+                dir('bugtracker-backend'){
+                    sh go test -v ./...
+                }
+            
             }
         }
     }
