Running backend unit test

--- a/jenkins/JenkinsFile
+++ b/jenkins/JenkinsFile
@@ -2,16 +2,16 @@ pipeline {
     agent any
 
     stages {
-        stage('Unit Tests-Backend') {
+        stage('Unit Tests - Backend') {
             agent {
-                docker{
+                docker {
                     image 'snakee/golang-junit:1.21'
                     reuseNode true
                 }
             }
             steps {
-                dir('bugtracker-backend'){
-                    sh go test -v ./...
+                dir('bugtracker-backend') {
+                    sh 'go test -v ./...'
                 }
             
             }
